# Minecraft-mod-classifier

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  main.yml
assets/: mods_data.json
src/: main.cpp
